# kadmin-rs

./: .envrc  .gitignore  .readthedocs.yaml  Cargo.toml  README.md  build.rs  flake.nix  justfile  pyproject.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci-python.yml  ci-rust.yml  release-create.yml  release-pr.yml
kadmin/: Cargo.toml  build.rs
kadmin-sys/: Cargo.toml  build.rs
kadmin-sys/src/: lib.rs
kadmin/src/: context.rs  conv.rs  db_args.rs  error.rs  java.rs  java.rs.in  kadmin.rs  key_data.rs  keysalt.rs  keysalt_list.rs  lib.rs  params.rs  policy.rs  principal.rs  python.rs  sync.rs  sys.rs  tl_data.rs  wrapper.h
kadmin/tests/: k5test.rs  kadmin_builder.rs  policy.rs  principal.rs  principals.rs  util.rs
python-kadmin-rs/: Cargo.toml
python-kadmin-rs/docs/: index.rst
python-kadmin-rs/python/kadmin/: __init__.pyi
python-kadmin-rs/python/kadmin/exceptions/: __init__.pyi
python-kadmin-rs/python/kadmin_local/: __init__.pyi
python-kadmin-rs/src/: lib.rs
python-kadmin-rs/tests/: test_principal.py  utils.py
python/docs/: kadmin.rst
python/src/kadmin/: __init__.py  __init__.pyi  exceptions.pyi  sys.py
python/src/kadmin/exceptions/: __init__.py
python/src/kadmin_local/: __init__.py  __init__.pyi
python/tests/: test_principal.py
src/: context.rs  db_args.rs  error.rs  kadmin.rs  keysalt.rs  lib.rs  params.rs  policy.rs  principal.rs  python.rs  sync.rs  sys.rs  tl_data.rs
tests/: k5test.rs  kadmin_builder.rs  policy.rs  principal.rs  util.rs
