[package]
name = "kadmin-sys"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "FFI bindings for the Kerberos administration interface (kadm5)"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["kerberos", "krb5", "kadm5", "kadmin"]
categories = ["external-ffi-bindings", "authentication"]

links = "kadm5"

[features]
default = []
client = []
server = []

[dependencies]

[build-dependencies]
bindgen = "0.70"
pkg-config = "0.3"
