[package]
name = "kadmin"
version = "0.6.3"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust bindings for the Kerberos administration interface (kadm5)"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["kerberos", "krb5", "kadm5", "kadmin"]
categories = ["api-bindings", "authentication"]

[features]
mit_client = []
mit_server = []
heimdal_client = []
heimdal_server = []
default = ["mit_client", "mit_server", "heimdal_client", "heimdal_server"]
python = ["dep:pyo3", "dep:indoc"]

[dependencies]
bitflags = "2.9"
chrono = "0.4"
dlopen2 = "0.8"
getset = "0.1"
indoc = { version = "2", optional = true }
# kadmin-sys = { path = "../kadmin-sys", version = "0.3.2", default-features = false }
libc = "0.2"
pyo3 = { version = "0.26", features = [
  "extension-module",
  "chrono",
  "chrono-tz",
], optional = true }
thiserror = "2"

[build-dependencies]
bindgen = "0.72"
pkg-config = "0.3"
prettyplease = "0.2"
quote = "1.0"
strum = { version = "0.27", features = ["derive"] }
syn = { version = "2.0", features = ["full", "parsing"] }

[dev-dependencies]
anyhow = "1"
pyo3 = { version = "0.26", features = ["auto-initialize"] }
rand = "0.9"
serial_test = { version = "3.1", default-features = false, features = [
  "log",
  "logging",
] }

[lints]
workspace = true

[package.metadata.release]
pre-release-replacements = [
  { file = "../pyproject.toml", search = "^version = \"[a-z0-9\\.-]+\"", replace = "version = \"{{version}}\"", exactly = 1 },
]
